--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,6 +45,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 --------------------------------------------------------------*/
 @import "variables-site/variables-site";
 @import "mixins/mixins-master";
+@import "mixins/bourbon";
 
 /*--------------------------------------------------------------
 # Normalize
