--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -1,5 +1,12 @@
-// @import "../layout/content-sidebar";
-// @import "../layout/sidebar-content";
+/*--------------------------------------------------------------
+## General Layout
+--------------------------------------------------------------*/
+@import "../layout/content-sidebar";
+
+/*--------------------------------------------------------------
+## General Layout
+--------------------------------------------------------------*/
+@import "../layout/general";
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
