--- a/style.css
+++ b/style.css
@@ -607,6 +607,54 @@ a {
 # Content
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
+## General Layout
+--------------------------------------------------------------*/
+.content-area {
+  float: left;
+  margin: 0 -30% 0 0;
+  width: 100%; }
+
+.site-main {
+  margin: 0 30% 0 0; }
+
+.site-content .widget-area {
+  float: right;
+  overflow: hidden;
+  width: 30%;
+  padding-left: 40px; }
+
+.no-active-sidebar .content-area {
+  float: none;
+  width: auto;
+  margin: 0; }
+
+.no-active-sidebar .site-main {
+  margin: 0; }
+
+@media (max-width: 600px) {
+  .content-area {
+    float: none;
+    width: auto;
+    margin: 0; }
+  .site-main {
+    margin: 0; }
+  .site-content .widget-area {
+    float: none;
+    width: 100%;
+    padding-left: 0;
+    margin-top: 40px; } }
+
+/*--------------------------------------------------------------
+## General Layout
+--------------------------------------------------------------*/
+.container {
+  margin: 0 auto;
+  max-width: none;
+  position: relative;
+  padding: 0 20px;
+  width: 1040px; }
+
+/*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
 .sticky {
