Added layout for #masthead and #colophon

--- a/sass/layout/_content-sidebar.scss
+++ b/sass/layout/_content-sidebar.scss
@@ -15,6 +15,12 @@
 	padding-left: 40px;
 }
 
+.site-footer {
+	clear: both;
+	width: $size__site-main;
+	min-width: 1060px;
+}
+
 .no-active-sidebar {
 
 	.content-area {
