--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -7,6 +7,12 @@
 ## General Layout
 --------------------------------------------------------------*/
 @import "../layout/general";
+
+/*--------------------------------------------------------------
+## Site Masthead
+--------------------------------------------------------------*/
+@import "primary/masthead";
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
