--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -18,3 +18,6 @@ $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+
+$color__text-meta: #d9d9d9;
+$color__text-titles: #2d2d2d; 
