Styling the post title

--- a/style.css
+++ b/style.css
@@ -748,6 +748,10 @@ a {
       text-decoration: none;
       color: inherit; }
 
+.entry-title {
+  text-align: center;
+  color: #2d2d2d; }
+
 /*--------------------------------------------------------------
 ## Asides
 --------------------------------------------------------------*/
