--- a/style.css
+++ b/style.css
@@ -347,7 +347,8 @@ hr {
   margin-bottom: 1.5em; }
 
 ul, ol {
-  margin: 0 0 1.5em 3em; }
+  margin: 0 0 1.5em 1.5em;
+  padding: 0; }
 
 ul {
   list-style: disc; }
