--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -57,7 +57,7 @@
 .tags-list {
 	margin-top: 1em;
 	a {
-		background: $color__text-light;
+		background: $color__borders ;
 		color: $color__text-medium;
 		display: inline-block;
 		margin-right: 10px;
