--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -26,4 +26,4 @@ $color__text-medium: #626262;
 $color__text-dark: #2d2d2d;
 
 $color__primary-accent: #25c48a;
-$color__primary-accent-dark: #126245;
+$color__primary-accent-dark: #21af7b;
