--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -103,3 +103,23 @@
 		width: 50%;
 	}
 }
+
+.post-navigation {
+	padding: 60px 0;
+	border-top: 2px solid $color__borders;
+	border-bottom: 2px solid $color__borders;
+
+	a {
+		text-decoration: none;
+		color: $color__text-dark;
+
+		.sub-title {
+			display: inline-block;
+			text-transform: uppercase;
+			color: $color__text-light;
+			border-bottom: 2px solid $color__text-light;
+			padding-bottom: 5px;
+			margin-bottom: 10px;
+		}
+	}
+}
