Added Jetpack sharing buttons to posts

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -72,3 +72,17 @@
 		}
 	}
 }
+
+.share-this {
+	font-size: 1em;
+}
+
+.single-post .sharedaddy .sd-content {
+	padding: 30px 0;
+	width: 100%;
+	text-align: center;
+
+	ul {
+		display: inline-block;
+	}
+}
