Changed translation domain to siteorigin-unwind

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@ Description: SiteOrigin Unwind is our latest, flexible multipurpose theme. It's 
 Version: dev
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: siteorigin_unwind
+Text Domain: siteorigin-unwind
 Tags: translation-ready, custom-background, theme-options, custom-menu, post-formats, threaded-comments, white, gray, responsive-layout, right-sidebar, custom-colors, custom-menu, full-width-template
 
 This theme, like WordPress, is licensed under the GPL.
