--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -52,6 +52,21 @@
 	text-align: center;
 	color: $color__text-dark;
 	margin-top: 0.25em;
+	font-size: 2em;
+
+	a {
+		color: inherit;
+		text-decoration: none;
+	}
+}
+
+.entry-thumbnail {
+	margin: 35px 0;
+
+	img {
+		max-width: 100%;
+		vertical-align: middle;
+	}
 }
 
 .tags-list {
@@ -159,4 +174,26 @@
 			}
 		}
 	}
+}
+
+.more-link {
+	font-size: 1em;
+	display: block;
+	text-align: center;
+	color: $color__text-dark;
+	text-transform: uppercase;
+	text-decoration: none;
+	margin-top: 70px;
+
+	.more-text {
+		padding: 10px 0;
+		border-top: 2px solid $color__text-light;
+		border-bottom: 2px solid $color__text-light;
+	}
+}
+
+.entry {
+	padding-bottom: 50px;
+	margin-bottom: 50px;
+	border-bottom: 2px solid $color__borders;
 }
