--- a/style.css
+++ b/style.css
@@ -543,15 +543,31 @@ a {
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
 .post-navigation .nav-previous {
-  float: left;
-  width: 50%; }
+  float: right;
+  text-align: right;
+  width: 50%;
+  padding: 10px 0; }
 
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
 .post-navigation .nav-next {
-  float: right;
-  text-align: right;
-  width: 50%; }
+  float: left;
+  text-align: left;
+  width: 50%;
+  padding: 10px 0; }
+
+.comment-navigation a,
+.posts-navigation a,
+.post-navigation a {
+  color: #2d2d2d;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 10px 20px;
+  border: 2px solid #dadada; }
+  .comment-navigation a:hover,
+  .posts-navigation a:hover,
+  .post-navigation a:hover {
+    color: #21af7b; }
 
 .post-navigation {
   padding: 60px 0;
@@ -767,7 +783,17 @@ a {
 .entry-title {
   text-align: center;
   color: #2d2d2d;
-  margin-top: 0.25em; }
+  margin-top: 0.25em;
+  font-size: 2em; }
+  .entry-title a {
+    color: inherit;
+    text-decoration: none; }
+
+.entry-thumbnail {
+  margin: 35px 0; }
+  .entry-thumbnail img {
+    max-width: 100%;
+    vertical-align: middle; }
 
 .tags-list {
   margin-top: 1em; }
@@ -838,6 +864,24 @@ a {
         text-decoration: none; }
         .author-box .author-description .post-author-title a:hover {
           color: #21af7b; }
+
+.more-link {
+  font-size: 1em;
+  display: block;
+  text-align: center;
+  color: #2d2d2d;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-top: 70px; }
+  .more-link .more-text {
+    padding: 10px 0;
+    border-top: 2px solid #dadada;
+    border-bottom: 2px solid #dadada; }
+
+.entry {
+  padding-bottom: 50px;
+  margin-bottom: 50px;
+  border-bottom: 2px solid #f4f4f4; }
 
 /*--------------------------------------------------------------
 ## Asides
