styled widget title

--- a/style.css
+++ b/style.css
@@ -645,6 +645,10 @@ a {
   .widget select {
     max-width: 100%; }
 
+.widget-title {
+  text-transform: uppercase;
+  font-size: 1.1em; }
+
 /*--------------------------------------------------------------
 # Content
 --------------------------------------------------------------*/
