Added footer widgets

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -14,6 +14,11 @@
 @import "primary/masthead";
 
 /*--------------------------------------------------------------
+## Site Footer
+--------------------------------------------------------------*/
+@import "primary/footer";
+
+/*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
 @import "primary/posts-and-pages";
