--- a/sass/site/primary/_footer.scss
+++ b/sass/site/primary/_footer.scss
@@ -1,3 +1,34 @@
 #colophon {
 	width: $size__site-main;
+
+	.widgets {
+		@include clearfix();
+		width: 100%;
+		overflow: hidden;
+		padding: 45px 0;
+
+		.widget-wrapper {
+			box-sizing: border-box;
+			float: left;
+			padding: 0 10px;
+
+			padding-bottom: 9999px;
+			margin-bottom: -9999px;
+		}
+
+		@for $i from 1 through 10 {
+			&.widgets-#{$i} .widget-wrapper{
+				width: 100% / $i;
+			}
+		}
+
+		@media (max-width: 640px) {
+			.widget-wrapper {
+				float: none;
+				width: 100% !important;
+				padding-bottom: 0;
+				margin-bottom: 0;
+			}
+		}
+	}
 }
