--- a/style.css
+++ b/style.css
@@ -715,6 +715,52 @@ a {
     width: 100%; }
 
 /*--------------------------------------------------------------
+## Site Footer
+--------------------------------------------------------------*/
+#colophon {
+  width: 100%; }
+  #colophon .widgets {
+    width: 100%;
+    overflow: hidden;
+    padding: 45px 0; }
+    #colophon .widgets::after {
+      clear: both;
+      content: "";
+      display: table; }
+    #colophon .widgets .widget-wrapper {
+      box-sizing: border-box;
+      float: left;
+      padding: 0 10px;
+      padding-bottom: 9999px;
+      margin-bottom: -9999px; }
+    #colophon .widgets.widgets-1 .widget-wrapper {
+      width: 100%; }
+    #colophon .widgets.widgets-2 .widget-wrapper {
+      width: 50%; }
+    #colophon .widgets.widgets-3 .widget-wrapper {
+      width: 33.33333%; }
+    #colophon .widgets.widgets-4 .widget-wrapper {
+      width: 25%; }
+    #colophon .widgets.widgets-5 .widget-wrapper {
+      width: 20%; }
+    #colophon .widgets.widgets-6 .widget-wrapper {
+      width: 16.66667%; }
+    #colophon .widgets.widgets-7 .widget-wrapper {
+      width: 14.28571%; }
+    #colophon .widgets.widgets-8 .widget-wrapper {
+      width: 12.5%; }
+    #colophon .widgets.widgets-9 .widget-wrapper {
+      width: 11.11111%; }
+    #colophon .widgets.widgets-10 .widget-wrapper {
+      width: 10%; }
+    @media (max-width: 640px) {
+      #colophon .widgets .widget-wrapper {
+        float: none;
+        width: 100% !important;
+        padding-bottom: 0;
+        margin-bottom: 0; } }
+
+/*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
 .sticky {
