Styled and modified theme footer

--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -1,7 +1,7 @@
 .container {
 	margin: 0 auto;
-	max-width: none;
+	max-width: 1040px;
 	position: relative;
 	padding: 0 20px;
-	width: 1040px;
+	width: 100%;
 }
