--- a/sass/site/primary/_footer.scss
+++ b/sass/site/primary/_footer.scss
@@ -1,5 +1,6 @@
 #colophon {
 	width: $size__site-main;
+	border-top: 1px solid $color__borders;
 
 	.widgets {
 		@include clearfix();
@@ -29,6 +30,29 @@
 				padding-bottom: 0;
 				margin-bottom: 0;
 			}
+		}
+	}
+
+	.site-info {
+		border-top: 1px solid $color__borders;
+		text-align: center;
+		padding: 25px 0;
+		font-size: 0.9em;
+		color: $color__text-medium;
+
+		a {
+			color: inherit;
+			text-decoration: none;
+
+			&:hover {
+				color: $color__primary-accent-dark;
+			}
+		}
+	}
+
+	&.unconstrained-footer {
+		.container {
+			max-width: none;
 		}
 	}
 }
