--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -18,3 +18,12 @@ $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+$color__borders: #f4f4f4;
+
+$color__text-meta: #d9d9d9;
+$color__text-light: #dadada;
+$color__text-medium: #626262;
+$color__text-dark: #2d2d2d;
+
+$color__primary-accent: #25c48a;
+$color__primary-accent-dark: #21af7b;
