--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -212,6 +212,10 @@
 }
 
 .entry {
+	margin-bottom: 50px;
+}
+
+.archive-entry {
 	padding-bottom: 50px;
 	margin-bottom: 50px;
 	border-bottom: 2px solid $color__borders;
