--- a/sass/layout/_content-sidebar.scss
+++ b/sass/layout/_content-sidebar.scss
@@ -8,6 +8,10 @@
 	margin: 0 $size__site-sidebar 0 0;
 }
 
+.site-content {
+	@include clearfix;
+}
+
 .site-content .widget-area {
 	float: right;
 	overflow: hidden;
