--- a/style.css
+++ b/style.css
@@ -739,7 +739,7 @@ a {
 --------------------------------------------------------------*/
 .container {
   margin: 0 auto;
-  max-width: 1040px;
+  max-width: 1150px;
   position: relative;
   padding: 0 20px;
   width: 100%; }
@@ -980,6 +980,32 @@ a {
   padding-bottom: 50px;
   margin-bottom: 50px;
   border-bottom: 2px solid #f4f4f4; }
+
+body.search-results .content-area article::after {
+  clear: both;
+  content: "";
+  display: table; }
+
+body.search-results .content-area article .entry-thumbnail {
+  width: 42.5%;
+  margin: 0 1.5% 0 0;
+  float: left; }
+
+body.search-results .content-area article .entry-content {
+  width: 100%;
+  float: right;
+  margin: 0; }
+  body.search-results .content-area article .entry-content .entry-meta {
+    text-align: left; }
+  body.search-results .content-area article .entry-content .entry-title {
+    text-align: left;
+    font-size: 1.35em;
+    margin: 0; }
+  body.search-results .content-area article .entry-content .entry-summary {
+    margin-top: 0.5em; }
+
+body.search-results .content-area article.has-post-thumbnail .entry-content {
+  width: 56%; }
 
 /*--------------------------------------------------------------
 ## Asides
