Added site branding

--- a/sass/site/primary/_masthead.scss
+++ b/sass/site/primary/_masthead.scss
@@ -1,8 +1,28 @@
 #masthead {
 	width: $size__site-main;
+	border-bottom: 1px solid $color__borders;
+	margin-bottom: 50px;
 
 	.container-inner {
 		display: table;
 		width: 100%;
+	}
+
+	.site-branding {
+		margin: 75px 0;
+
+		.site-title {
+			font-size: 3em;
+			margin: 0;
+			text-align: center;
+			a {
+				text-decoration: none;
+				color: inherit;
+			}
+		}
+
+		.site-description {
+			text-align: center;
+		}
 	}
 }
