--- a/style.css
+++ b/style.css
@@ -492,33 +492,52 @@ a {
   clear: both;
   display: block;
   float: left;
-  width: 100%; }
+  padding: 0.7em 0; }
   .main-navigation ul {
     display: none;
     list-style: none;
     margin: 0;
     padding-left: 0; }
     .main-navigation ul ul {
-      box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+      background: #fff;
       float: left;
       position: absolute;
-      top: 1.5em;
+      top: 2.5em;
       left: -999em;
-      z-index: 99999; }
+      z-index: 99999;
+      padding: 0; }
       .main-navigation ul ul ul {
         left: -999em;
         top: 0; }
-      .main-navigation ul ul li:hover > ul,
-      .main-navigation ul ul li.focus > ul {
-        left: 100%; }
+      .main-navigation ul ul li {
+        padding: 0; }
+        .main-navigation ul ul li:hover > ul,
+        .main-navigation ul ul li.focus > ul {
+          left: 100%; }
+        .main-navigation ul ul li:last-child a {
+          border-bottom: 0; }
       .main-navigation ul ul a {
-        width: 200px; }
+        min-width: 150px;
+        text-transform: none;
+        border-bottom: 1px solid #f4f4f4;
+        margin: 0 20px;
+        padding: 10px 0; }
     .main-navigation ul li:hover > ul,
     .main-navigation ul li.focus > ul {
       left: auto; }
   .main-navigation li {
     float: left;
-    position: relative; }
+    position: relative;
+    padding-right: 2em; }
+    .main-navigation li a {
+      text-transform: uppercase;
+      color: #626262;
+      font-size: 0.85em;
+      padding: 0.75em 0; }
+    .main-navigation li:hover > a,
+    .main-navigation li.focus > a {
+      color: #2d2d2d; }
   .main-navigation a {
     display: block;
     text-decoration: none; }
@@ -751,9 +770,12 @@ a {
   width: 100%;
   border-bottom: 1px solid #f4f4f4;
   margin-bottom: 50px; }
-  #masthead .container-inner {
-    display: table;
-    width: 100%; }
+  #masthead .top-bar {
+    border-bottom: 1px solid #f4f4f4; }
+    #masthead .top-bar::after {
+      clear: both;
+      content: "";
+      display: table; }
   #masthead .site-branding {
     margin: 75px 0; }
     #masthead .site-branding .site-title {
