--- a/style.css
+++ b/style.css
@@ -491,8 +491,11 @@ a {
 .main-navigation {
   clear: both;
   display: block;
-  float: left;
-  padding: 0.7em 0; }
+  float: left; }
+  .main-navigation::after {
+    clear: both;
+    content: "";
+    display: table; }
   .main-navigation ul {
     display: none;
     list-style: none;
@@ -503,7 +506,7 @@ a {
       background: #fff;
       float: left;
       position: absolute;
-      top: 2.5em;
+      top: 50px;
       left: -999em;
       z-index: 99999;
       padding: 0; }
@@ -522,7 +525,7 @@ a {
         text-transform: none;
         border-bottom: 1px solid #f4f4f4;
         margin: 0 20px;
-        padding: 10px 0; }
+        padding: 15px 0; }
     .main-navigation ul li:hover > ul,
     .main-navigation ul li.focus > ul {
       left: auto; }
@@ -533,8 +536,9 @@ a {
     .main-navigation li a {
       text-transform: uppercase;
       color: #626262;
-      font-size: 0.85em;
-      padding: 0.75em 0; }
+      font-size: 12px;
+      line-height: 12px;
+      padding: 24px 0; }
     .main-navigation li:hover > a,
     .main-navigation li.focus > a {
       color: #2d2d2d; }
@@ -543,15 +547,85 @@ a {
     text-decoration: none; }
 
 /* Small menu. */
-.menu-toggle,
-.main-navigation.toggled ul {
-  display: block; }
+.main-navigation ul {
+  display: none; }
 
-@media screen and (min-width: 37.5em) {
+.menu-toggle {
+  display: block;
+  border: 0;
+  background: transparent;
+  height: 20px;
+  margin: 20px 0;
+  outline: none; }
+
+@media screen and (min-width: 769px) {
   .menu-toggle {
     display: none; }
   .main-navigation ul {
-    display: block; } }
+    display: block; }
+  #mobile-navigation {
+    display: none !important; } }
+
+#mobile-navigation {
+  position: absolute;
+  left: 0;
+  top: 60px;
+  width: 100%;
+  z-index: 10; }
+  #mobile-navigation ul {
+    margin: 0;
+    list-style: none;
+    padding: 0; }
+    #mobile-navigation ul li {
+      line-height: 42px;
+      background: #f8f8f8;
+      width: 100%;
+      position: relative; }
+      #mobile-navigation ul li a {
+        display: block;
+        text-decoration: none;
+        color: #626262;
+        padding: 15px 0 15px 20px;
+        border-bottom: 1px solid #ebebeb;
+        width: 100%;
+        font-size: 12px;
+        line-height: 12px;
+        text-transform: uppercase; }
+      #mobile-navigation ul li.menu-item-has-children > a {
+        padding-right: 48px; }
+      #mobile-navigation ul li .dropdown-toggle {
+        background: transparent;
+        border: 0;
+        content: "";
+        height: 30px;
+        padding: 6px;
+        position: absolute;
+        top: 0;
+        right: 5px;
+        width: 42px;
+        outline: none;
+        box-shadow: none; }
+        #mobile-navigation ul li .dropdown-toggle:after {
+          color: #626262;
+          content: "d";
+          font-size: 15px;
+          line-height: 42px;
+          position: relative;
+          top: 0;
+          left: 1px;
+          width: 42px; }
+    #mobile-navigation ul ul {
+      margin: 0;
+      padding: 0;
+      display: none; }
+      #mobile-navigation ul ul li {
+        padding-left: 20px;
+        background: #ffffff; }
+        #mobile-navigation ul ul li a {
+          width: 100%;
+          text-transform: uppercase; }
+        #mobile-navigation ul ul li ul {
+          display: none; }
 
 .site-main .comment-navigation, .site-main
 .posts-navigation, .site-main
@@ -771,7 +845,8 @@ a {
   border-bottom: 1px solid #f4f4f4;
   margin-bottom: 50px; }
   #masthead .top-bar {
-    border-bottom: 1px solid #f4f4f4; }
+    border-bottom: 1px solid #f4f4f4;
+    height: 60px; }
     #masthead .top-bar::after {
       clear: both;
       content: "";
