--- a/style.css
+++ b/style.css
@@ -627,6 +627,56 @@ a {
         #mobile-navigation ul ul li ul {
           display: none; }
 
+.social-search {
+  float: right; }
+  .social-search .search-toggle {
+    background: transparent;
+    border: none;
+    height: 20px;
+    margin: 20px 0;
+    outline: none; }
+    .social-search .search-toggle .open {
+      display: block; }
+    .social-search .search-toggle .close {
+      display: none; }
+    .social-search .search-toggle.close-search .open {
+      display: none; }
+    .social-search .search-toggle.close-search .close {
+      display: block; }
+
+#fullscreen-search {
+  position: absolute;
+  top: 60px;
+  left: 0;
+  background: rgba(255, 255, 255, 0.9);
+  z-index: 10;
+  display: none; }
+  #fullscreen-search form {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+    #fullscreen-search form .searchform-title {
+      text-align: center;
+      text-transform: uppercase;
+      font-size: 18px;
+      padding-bottom: 1em; }
+    #fullscreen-search form input[type="search"] {
+      border: 0;
+      height: 50px;
+      font-size: 36px;
+      outline: none; }
+    #fullscreen-search form input[type="submit"] {
+      display: none; }
+    #fullscreen-search form .search-icon {
+      font-size: 36px;
+      position: absolute;
+      right: 0; }
+
+@media screen and (max-width: 768px) {
+  #fullscreen-search form input[type="search"] {
+    font-size: 24px; } }
+
 .site-main .comment-navigation, .site-main
 .posts-navigation, .site-main
 .post-navigation {
@@ -846,7 +896,8 @@ a {
   margin-bottom: 50px; }
   #masthead .top-bar {
     border-bottom: 1px solid #f4f4f4;
-    height: 60px; }
+    height: 60px;
+    position: relative; }
     #masthead .top-bar::after {
       clear: both;
       content: "";
